--- a/web/routing-0.html
+++ b/web/routing-0.html
@@ -1,29 +1,25 @@
 <html>
 <head>
 
-<title> A Basic GeoExt Page </title>
+<title>A Basic GeoExt Page</title>
 <script src="Ext-3.2.1/adapter/ext/ext-base.js" type="text/javascript"></script>
 <script src="Ext-3.2.1/ext-all.js"  type="text/javascript"></script>
-<link rel="stylesheet" type="text/css" href="Ext-3.2.1/resources/ext-all.css"></link>
+<link rel="stylesheet" type="text/css" href="Ext-3.2.1/resources/css/ext-all.css" />
 <script src="OpenLayers-2.9.1/lib/OpenLayers.js" type="text/javascript"></script>
 <script src="GeoExt-0.7/lib/GeoExt.js" type="text/javascript"></script>
-<link rel="stylesheet" type="text/css" href="GeoExt-0.7/resources/geoext-all-debug.css"></link>
+<link rel="stylesheet" type="text/css" href="GeoExt-0.7/resources/css/geoext-all-debug.css" />
 
 <script type="text/javascript">
     Ext.onReady(function() {
-        var map = new OpenLayers.Map();
-        var layer = new OpenLayers.Layer.WMS(
-            "Global Imagery",
-            "http://maps.opengeo.org/geowebcache/service/wms",
-            {layers: "bluemarble"}
-        );
-        map.addLayer(layer);
-
-        new GeoExt.MapPanel({
+        var panel = new GeoExt.MapPanel({
             renderTo: 'gxmap',
+            map: {
+                layers: [new OpenLayers.Layer.OSM("Simple OSM Map")]
+            },
+            center: [245300, 5070600],
+            zoom: 11,
             height: 400,
             width: 600,
-            map: map,
             title: 'A Simple GeoExt Map'
         });
     });
