--- a/web/routing-final.html
+++ b/web/routing-final.html
@@ -7,7 +7,8 @@
 <link rel="stylesheet" type="text/css" href="Ext-3.2.1/resources/css/ext-all.css" />
 <script src="OpenLayers-2.9.1/lib/OpenLayers.js" type="text/javascript"></script>
 <script src="GeoExt-0.7/lib/GeoExt.js" type="text/javascript"></script>
-<link rel="stylesheet" type="text/css" href="GeoExt-0.7/resources/css/geoext-all-debug.css" />
+<link rel="stylesheet" type="text/css" 
+							href="GeoExt-0.7/resources/css/geoext-all-debug.css" />
 
 <script src="DrawPoints.js" type="text/javascript"></script>
 
