--- a/web/routing-final.html
+++ b/web/routing-final.html
@@ -108,7 +108,7 @@
             ],
             proxy: new GeoExt.data.ProtocolProxy({
                 protocol: new OpenLayers.Protocol.HTTP({
-                    url: '/php/pgrouting.php',
+                    url: '/pgrouting-workshop/php/pgrouting.php',
                     format: new OpenLayers.Format.GeoJSON({
                         internalProjection: epsg_900913,
                         externalProjection: epsg_4326
