--- a/web/routing-final.html
+++ b/web/routing-final.html
@@ -8,7 +8,7 @@
 <script src="OpenLayers-2.9.1/lib/OpenLayers.js" type="text/javascript"></script>
 <script src="GeoExt-0.7/lib/GeoExt.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" 
-							href="GeoExt-0.7/resources/css/geoext-all-debug.css" />
+      href="GeoExt-0.7/resources/css/geoext-all-debug.css" />
 
 <script src="DrawPoints.js" type="text/javascript"></script>
 
@@ -33,8 +33,8 @@
              // load to route
              store.load({
                  params: {
-                     startpoint: startpoint.x + ' ' + startpoint.y,
-                     finalpoint: finalpoint.x + ' ' + finalpoint.y,
+                     startpoint: startpoint.x + " " + startpoint.y,
+                     finalpoint: finalpoint.x + " " + finalpoint.y,
                      method: combo.getValue()
                  }
              });
@@ -44,7 +44,7 @@
     Ext.onReady(function() {
         // create the map panel
         var panel = new GeoExt.MapPanel({
-            renderTo: 'gxmap',
+            renderTo: "gxmap",
             map: {
                 layers: [new OpenLayers.Layer.OSM("Simple OSM Map")]
             },
@@ -52,7 +52,7 @@
             zoom: 11,
             height: 400,
             width: 600,
-            title: 'A Simple GeoExt Map'
+            title: "A Simple GeoExt Map"
         });
         var map = panel.map;
 
@@ -104,11 +104,11 @@
         var store = new GeoExt.data.FeatureStore({
             layer: route_layer,
             fields: [
-                {name: 'length'}
+                {name: "length"}
             ],
             proxy: new GeoExt.data.ProtocolProxy({
                 protocol: new OpenLayers.Protocol.HTTP({
-                    url: '/pgrouting-workshop/php/pgrouting.php',
+                    url: "/pgrouting-workshop/php/pgrouting.php",
                     format: new OpenLayers.Format.GeoJSON({
                         internalProjection: epsg_900913,
                         externalProjection: epsg_4326
@@ -120,13 +120,13 @@
         // create the method combo box
         var method = new Ext.form.ComboBox({
             renderTo: "method",
-            triggerAction: 'all',
+            triggerAction: "all",
             editable: false,
             forceSelection: true,
             store: [
-                ['SPD', 'Shortest Path Dijkstra'],
-                ['SPA', 'Shortest Path A*'],
-                ['SPS', 'Shortest Path Shooting*']
+                ["SPD", "Shortest Path Dijkstra"],
+                ["SPA", "Shortest Path A*"],
+                ["SPS", "Shortest Path Shooting*"]
             ],
             listeners: {
                 select: function() {
@@ -135,7 +135,7 @@
             }
         });
         // default method is Shortest Path Dijkstra
-        method.setValue('SPD');
+        method.setValue("SPD");
     });
 </script>
 </head>
