--- a/web/routing-final.html
+++ b/web/routing-final.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="Ext-3.2.1/resources/css/ext-all.css" />
 <script src="OpenLayers-2.9.1/lib/OpenLayers.js" type="text/javascript"></script>
 <script src="GeoExt-0.7/lib/GeoExt.js" type="text/javascript"></script>
-<link rel="stylesheet" type="text/css" 
+<link rel="stylesheet" type="text/css"
       href="GeoExt-0.7/resources/css/geoext-all-debug.css" />
 
 <script src="DrawPoints.js" type="text/javascript"></script>
@@ -16,10 +16,11 @@
 
 <script type="text/javascript">
 
+     // global projection objects (uses the proj4js lib)
      var epsg_4326 = new OpenLayers.Projection("EPSG:4326"),
          epsg_900913 = new OpenLayers.Projection("EPSG:900913");
 
-     function pgrouting(store, layer, combo) {
+     function pgrouting(store, layer, method) {
          if (layer.features.length == 2) {
              // erase the previous route
              store.removeAll();
@@ -29,16 +30,16 @@
              startpoint.transform(epsg_900913, epsg_4326);
              var finalpoint = layer.features[1].geometry.clone();
              finalpoint.transform(epsg_900913, epsg_4326);
-             
+
              // load to route
              store.load({
                  params: {
                      startpoint: startpoint.x + " " + startpoint.y,
                      finalpoint: finalpoint.x + " " + finalpoint.y,
-                     method: combo.getValue()
+                     method: method
                  }
              });
-        }
+         }
     }
 
     Ext.onReady(function() {
@@ -65,12 +66,12 @@
         });
 
         // create the layer where the start and final points will be drawn
-        var points_layer = new OpenLayers.Layer.Vector();
+        var points_layer = new OpenLayers.Layer.Vector("points");
 
         // when a new point is added to the layer, call the pgrouting function
         points_layer.events.on({
             featureadded: function() {
-                pgrouting(store, points_layer, method);
+                pgrouting(store, points_layer, method.getValue());
             }
         });
 
@@ -87,18 +88,11 @@
 
         // when a point is moved, call the pgrouting function
         drag_points.onComplete = function() {
-              pgrouting(store, points_layer, method);
+              pgrouting(store, points_layer, method.getValue());
         };
 
         // add the controls to the map
         map.addControls([draw_points, drag_points]);
-
-// FIXME
-//         var route_select = new OpenLayers.Control.SelectFeature(route_layer, {
-//             autoActivate: true,
-//             hover: true
-//         });
-//         map.addControls([route_select]);
 
         // create the store to query the web service
         var store = new GeoExt.data.FeatureStore({
@@ -130,7 +124,7 @@
             ],
             listeners: {
                 select: function() {
-                    pgrouting(store, points_layer, method);
+                    pgrouting(store, points_layer, method.getValue());
                 }
             }
         });
