fixed wrong path of PHP script in Javascript demo

--- a/web/routing-final.html
+++ b/web/routing-final.html
@@ -102,7 +102,7 @@
             ],
             proxy: new GeoExt.data.ProtocolProxy({
                 protocol: new OpenLayers.Protocol.HTTP({
-                    url: "/pgrouting-workshop/php/pgrouting.php",
+                    url: "./php/pgrouting.php",
                     format: new OpenLayers.Format.GeoJSON({
                         internalProjection: epsg_900913,
                         externalProjection: epsg_4326
