center map to Denver . Closes #10

--- a/web/routing-0.html
+++ b/web/routing-0.html
@@ -17,8 +17,8 @@
             map: {
                 layers: [new OpenLayers.Layer.OSM("Simple OSM Map")]
             },
-            center: [245300, 5070600],
-            zoom: 11,
+            center: [-11677898, 4827144],
+            zoom: 10,
             height: 400,
             width: 600,
             title: 'A Simple GeoExt Map'
