upgrade proj4js from version 1.0.1 to 1.0.2

--- a/web/routing-final.html
+++ b/web/routing-final.html
@@ -12,7 +12,7 @@
 
 <script src="DrawPoints.js" type="text/javascript"></script>
 
-<script src="proj4js-1.0.1/lib/proj4js.js" type="text/javascript"></script>
+<script src="proj4js/lib/proj4js.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 
