use GeoExt build and the non-debug css

--- a/web/routing-0.html
+++ b/web/routing-0.html
@@ -6,9 +6,9 @@
 <script src="ext/ext-all.js"  type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="ext/resources/css/ext-all.css" />
 <script src="OpenLayers/OpenLayers.js" type="text/javascript"></script>
-<script src="GeoExt/lib/GeoExt.js" type="text/javascript"></script>
+<script src="GeoExt/script/GeoExt.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css"
-      href="GeoExt/resources/css/geoext-all-debug.css" />
+      href="GeoExt/resources/css/geoext-all.css" />
 
 <script type="text/javascript">
     Ext.onReady(function() {
