--- a/web/ol3-routing.html
+++ b/web/ol3-routing.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <link href="ol3/ol.css" rel="stylesheet">
     <style>
-      html, body, #ol-map {
-        height: 100%;
-        margin: 0;
+      #ol-map {
+        width: 100%;
+        height: 400px;
       }
     </style>
     <script src="ol3/ol.js"></script>
