More ol3 content

--- a/web/ol3-routing-base.html
+++ b/web/ol3-routing-base.html
@@ -25,8 +25,8 @@
           })
         ],
         view: new ol.View2D({
-          center: [0, 0],
-          zoom: 2
+          center: [-127998, 6974591],
+          zoom: 10
         })
       });
 
