Remove references to the routing method selection

--- a/web/ol3-routing-final.html
+++ b/web/ol3-routing-final.html
@@ -18,12 +18,6 @@
       <div id="final-point">final</div>
     </div>
 
-    <select id="algorithm">
-      <option value="SPD" selected>Shortest Path Dijkstra</option>
-      <option value="SPA">Shortest Path A*</option>
-      <option value="SPS">Shortest Path Shooting*</option>
-    </select>
-
     <button id="clear">clear</button>
 
     <script type="text/javascript">
@@ -42,8 +36,7 @@
       });
 
       var params = {
-        FORMAT: 'image/png',
-        METHOD: 'SPD'
+        FORMAT: 'image/png'
       };
 
       var result = new ol.layer.ImageLayer({
@@ -54,11 +47,6 @@
         })
       });
       map.addLayer(result);
-
-      document.getElementById('algorithm').addEventListener('change', function(event) {
-        params.METHOD = event.target.value;
-        // FIXME: refresh layer
-      });
 
       var startPoint = new ol.Overlay({
         map: map,
