Add missing renderer option in map init

--- a/web/ol3-routing-base.html
+++ b/web/ol3-routing-base.html
@@ -19,6 +19,7 @@
 
       var map = new ol.Map({
         target: 'ol-map',
+        renderer: ol.RendererHint.CANVAS,
         layers: [
           new ol.layer.TileLayer({
             source: new ol.source.OSM()
