More geoserver and ol3 content

--- a/web/ol3-routing-final.html
+++ b/web/ol3-routing-final.html
@@ -50,7 +50,7 @@
         element: document.getElementById('final-point')
       });
 
-     var transform = ol.proj.getTransform('EPSG:3857', 'EPSG:4326');
+      var transform = ol.proj.getTransform('EPSG:3857', 'EPSG:4326');
 
       map.on('click', function(event) {
         var coordinate = event.getCoordinate();
@@ -61,6 +61,8 @@
           // second click
           finalPoint.setPosition(coordinate);
 
+          // transform the coordinates from the map projection (EPSG:3857)
+          // into the server projection (EPSG:4326)
           var startCoord = transform(startPoint.getPosition());
           var finalCoord = transform(finalPoint.getPosition());
           var viewparams = [
