upgraded to OL3-beta-5 with thanks to ahocevar

--- a/web/ol3-routing-base.html
+++ b/web/ol3-routing-base.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>ol3 pgRouting client</title>
-    <meta charset="utf-8">
-    <link href="ol3/ol.css" rel="stylesheet">
-    <style>
-      #ol-map {
-        width: 100%;
-        height: 400px;
-      }
-    </style>
-    <script src="ol3/ol.js"></script>
-  </head>
-  <body>
-    <div id="ol-map"></div>
+    <head>
+        <title>ol3 pgRouting client</title>
+        <meta charset="utf-8">
+        <link href="ol3/ol.css" rel="stylesheet">
+        <style>
+            #ol-map {
+                width: 100%;
+                height: 400px;
+            }
+        </style>
+        <script src="ol3/ol.js"></script>
+    </head>
+    <body>
+        <div id="ol-map"></div>
 
-    <script type="text/javascript">
+        <script type="text/javascript">
 
-      var map = new ol.Map({
-        target: 'ol-map',
-        renderer: ol.RendererHint.CANVAS,
-        layers: [
-          new ol.layer.TileLayer({
-            source: new ol.source.OSM()
-          })
-        ],
-        view: new ol.View2D({
-          center: [-127998, 6974591],
-          zoom: 10
-        })
-      });
+            var map = new ol.Map({
+                target: 'ol-map',
+                layers: [
+                    new ol.layer.Tile({
+                        source: new ol.source.OSM()
+                    })
+                ],
+                view: new ol.View2D({
+                    center: [-127998, 6974591],
+                    zoom: 10
+                })
+            });
 
-    </script>
-  </body>
+        </script>
+    </body>
 </html>
