updated to AGIT2014 version

--- a/search.html
+++ b/search.html
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
-        VERSION:     '3',
+        VERSION:     '4',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -31,8 +31,6 @@
   <script type="text/javascript">
     jQuery(function() { Search.loadIndex("searchindex.js"); });
   </script>
-  
-  <script type="text/javascript" id="searchindexloader"></script>
   
 	<script type="text/javascript">
 	/* <![CDATA[ */
@@ -122,8 +120,8 @@
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2010-2013 Hal Seki, Yves Jacolin, Daniel Kastl, Frédéric Junod.
-      Last updated on Oct 05, 2013.
+        &copy; Copyright 2010-2014 Daniel Kastl, Frédéric Junod.
+      Last updated on Jul 03, 2014.
     </div>
   </body>
 </html>
