--- a/web/ol3-routing-base.html
+++ b/web/ol3-routing-base.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>ol3 pgRouting client</title>
-        <meta charset="utf-8">
-        <link href="ol3/ol.css" rel="stylesheet">
-        <style>
-            #ol-map {
-                width: 100%;
-                height: 400px;
-            }
-        </style>
-        <script src="ol3/ol.js"></script>
-    </head>
-    <body>
-        <div id="ol-map"></div>
-
-        <script type="text/javascript">
-
-            var map = new ol.Map({
-                target: 'ol-map',
-                layers: [
-                    new ol.layer.Tile({
-                        source: new ol.source.OSM()
-                    })
-                ],
-                view: new ol.View2D({
-                    center: [-127998, 6974591],
-                    zoom: 10
-                })
-            });
-
-        </script>
-    </body>
+  <head>
+  <title>ol3 pgRouting client</title>
+  <meta charset="utf-8">
+  <link href="ol3/ol.css" rel="stylesheet">
+  <style>
+  #map {
+    width: 100%;
+    height: 400px;
+  }
+  </style>
+  </head>
+  <body>
+  <div id="map"></div>
+  <script src="ol3/ol.js"></script>
+  <script type="text/javascript">
+  var map = new ol.Map({
+    target: 'map',
+    layers: [
+      new ol.layer.Tile({
+      source: new ol.source.OSM()
+      })
+    ],
+    view: new ol.View2D({
+      center: [-13657275.569447909, 5699392.057118396],
+      zoom: 10
+    })
+  });
+  </script>
+  </body>
 </html>
