--- a/web/ol3-routing-final.html
+++ b/web/ol3-routing-final.html
@@ -69,7 +69,7 @@
       params.viewparams = viewparams.join(';');
       result = new ol.layer.Image({
         source: new ol.source.ImageWMS({
-          url: 'http://app.ex6.georepublic.net:8080/geoserver/pgrouting/wms',
+          url: 'http://localhost:8082/geoserver/pgrouting/wms',
           params: params
         })
       });
