Minor changes to the ol3-routing examples

--- a/web/ol3-routing-final.html
+++ b/web/ol3-routing-final.html
@@ -20,7 +20,7 @@
     target: 'map',
     layers: [
       new ol.layer.Tile({
-      source: new ol.source.OSM()
+        source: new ol.source.OSM()
       })
     ],
     view: new ol.View2D({
@@ -34,7 +34,7 @@
     FORMAT: 'image/png'
   }
 
-  // The "start" featura and "destination features.
+  // The "start" and "destination" features.
   var startPoint = new ol.Feature();
   var destPoint = new ol.Feature();
 
@@ -78,7 +78,7 @@
   });
 
   var clearButton = document.getElementById('clear');
-  clearButton..addEventListener('click', function(event) {
+  clearButton.addEventListener('click', function(event) {
     // Reset the "start" and "destination" features.
     startPoint.setGeometry(null);
     destPoint.setGeometry(null);
