Use the latest ol3 version

--- a/web/ol3-routing-base.html
+++ b/web/ol3-routing-base.html
@@ -22,9 +22,14 @@
         source: new ol.source.OSM()
       })
     ],
-    view: new ol.View2D({
+    view: new ol.View({
       center: [-13657275.569447909, 5699392.057118396],
       zoom: 10
+    }),
+    controls: ol.control.defaults({
+      attributionOptions: {
+        collapsible: false
+      }
     })
   });
   </script>
